--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,9 @@
 /* styles */
 /* called by your view template */
 
+/* You might want to try something fancier: */
+/* less: http://lesscss.org/ */
+
 * {
   box-sizing: border-box;
 }
