--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,18 @@
 <!-- This is a static file -->
 <!-- served from your routes in server.js -->
 
+<!-- You might want to try something fancier: -->
+<!-- html/nunjucks docs: http://mozilla.github.io/nunjucks/ -->
+<!-- jade: http://jade-lang.com/ -->
+<!-- haml: http://haml.info/tutorial.html -->
+<!-- hbs(handlebars): http://handlebarsjs.com/expressions.html -->
+
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Lowdb Example</title>
-    <meta name="description" content="Lowdb Example">
-    <link id="favicon" rel="icon" href="https://glitch.com/favicon-app.ico" type="image/x-icon">
+    <title>Welcome to HyperDev!</title>
+    <meta name="description" content="A cool thing made with HyperDev">
+    <link id="favicon" rel="icon" href="https://hyperdev.com/favicon.ico" type="image/x-icon">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,26 +21,28 @@
   <body>
     <header>
       <h1>
-        A list of users
+        A Dream of the Future
       </h1>
     </header>
 
     <main>
-      <p>Add a new user:</p>
+      <p class="bold">Oh hi,</p>
+      <p>Tell me your hopes and dreams:</p>
       <form>
-        <input id="fName" type="text" maxlength="100" placeholder="John"> <input id="lName" type="text" maxlength="100" placeholder="Hancock">
+        <input type="text" maxlength="100" placeholder="Dreams!">
         <button type="submit">Submit</button>
       </form>
-      <p>Users:</p>
-      <section class="users">
-        <ul id="users">
+      <section class="dreams">
+        <ul id="dreams">
         </ul>
       </section>
-      <p><a href="/reset">Reset</a> | <a href="/clear">Clear</a></p>
     </main>
 
-    <script src="https://button.glitch.me/button.js" data-style="glitch"></script>
-    <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
+    <footer>
+      <a href="https://hyperdev.com">
+        Remix this in HyperDev
+      </a>
+    </footer>
 
     <!-- Your web-app is https, so your scripts need to be too -->
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"
